--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
+baseURL = "https://projects.bg117.xyz"
+languageCode = "en-us"
 title = "bg117's random projects"
 theme = "terminal"
