--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,8 @@
-baseURL = "https://bg117.xyz/projects"
+baseURL = "https://prismatic-lollipop-6213d5.netlify.app"
 languageCode = "en-us"
 title = "bg117's random projects"
 theme = "terminal"
+
+[params]
+themeColor = "blue"
+fullWidthTheme = true
