--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://www.bg117.xyz/projects/"
 languageCode = "en-us"
 title = "bg117's random projects"
 theme = "terminal"
